--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-command = "deno run --allow-read --allow-net server.ts"
 publish = "."
+
+[context.production]
+publish = "public/"
+command = "deno run --allow-read --allow-net server.ts"
